# casting-platform

./: .env.example  .gitignore  Makefile  PROJECT_CONTEXT.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
services/core/: .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-prod  celerybeat-schedule  config.py  errors.py  nixpacks.toml  pyproject.toml  requirements.txt
services/core/actor_profiles/: media_routes.py  media_service.py  repository.py  routes.py  schemas.py  service.py
services/core/background/: celery_conf.py  cron_tasks.py
services/core/background/backup/postgres/: tasks.py
services/core/billing/: models.py  routes.py  service.py
services/core/castings/: enums.py  models.py
services/core/castings/repositories/types/: admin.py  tma_user.py
services/core/castings/repositories/utils/: admin.py
services/core/castings/routes/: admin.py  tma_user.py
services/core/castings/schemas/: admin.py  tma_user.py
services/core/castings/services/admin/: exceptions.py  service.py
services/core/castings/services/shared/: telegram_sync.py
services/core/castings/services/tma_user/: exceptions.py  service.py
services/core/cities/: models.py  repository.py  schemas.py  service.py  util.py
services/core/cities/routes/: admin.py  tma_user.py
services/core/crm/: generate_vapid.py  models.py  push_routes.py  push_service.py  routes.py  service.py
services/core/docker/: beat.sh  flower.sh  gunicorn.conf.py  gunicorn.dev.sh  gunicorn.prod.sh  migrations.sh  pre-install.sh  worker.sh
services/core/docker/grafana/prometheus/: counters.py  metrics.py  middlewares.py
services/core/docker/grafana/tempo/: instrumentation.py  tempo_config.py
services/core/employer/: routes.py  schemas.py  service.py  subscription.py
services/core/environments/: decrypt.sh  encrypt.sh
services/core/environments/development/: .env.enc
services/core/environments/local/: .env.enc
services/core/environments/production/: .env.enc  .env.template
services/core/log/: base.py  fitlers.py  log_config.py  middlewares.py
services/core/main/: .gitignore  main_dev.py  main_local.py  main_prod.py
services/core/migrations/: cities.txt  env.py
services/core/migrations/versions/: 01609a6646ad_add_city_full_col_in_profile.py  084afa401837_fix_qualification.py  0c2c0382b0ee_add_new_colllumns_with_eng_code.py  0c73e2832547_add__city_col_in_profile.py  0e7e9264a87c_add_city_full_col_in_profile.py  14828a227d11_add_image_type_col.py  18a1b806dc65_add_crop_image_url_field_for_.py  1a635e9e73d3_authpredicate_table.py  1ab8e7260969_.py  29fa918a30c4_set_cities_values.py  38bb95968d6d_reports_tables_init.py  39530620f641_fix_gender_col.py  3db2e24b6899_init_dev_users.py  3e35351b9984_add_status_column.py  40f1f03382e1_.py  418e19353790_reports_tables_init.py  4b35cc11f414_fix_gender_col.py  4f12d2e22838_add__city_col_in_profile.py  4f541b35ce0b_add_city_col_in_profile.py  5fae61d6a534_.py  73d48b43a9c3_fix_image_type.py  746bd0220452_.py  8e9239a17b74_.py  8f9e18dbeb98_add_status_column.py  8fffa2d021e6_reports_tables_init.py  909afbc2d5b9_add_self_test_url_coll_in_responses.py  9eed45e35614_.py  a08ff9544e3f_.py  a439c5c5331f_add_cities_table.py  ad797b7f6ba8_fix_image_type.py  b3063fd522e1_add_new_colllumns.py  cb00c3937966_reports_tables_init.py  d2148964e776_drop_3_max_images_сonstraint.py  f0a7c7d3d784_init_dev_users.py  f97bfa02af3d_init.py  v10_add_user_agent_to_push_subscriptions.py  v11_actor_profile_tax_status.py  v2_0_casting_platform_transform.py  v3_agent_role.py  v3_employer_pro_subs.py  (+21 more)
services/core/oauth/: __init__.py  providers.py  routes.py  service.py
services/core/postgres/: database.py  database_backup.py  database_restore.py
services/core/profiles/: enums.py  models.py
services/core/profiles/routes/: admin.py  producer.py  tma_user.py
services/core/profiles/schemas/: admin.py  producer.py  tma_user.py
services/core/rbac/: __init__.py  decorators.py  middleware.py  permissions.py
services/core/reports/: enums.py  exceptions.py  models.py
services/core/reports/routes/: admin.py  doc.py  producer.py
services/core/reports/schemas/: admin.py  base.py  producer.py  report_generate.py
services/core/reports/services/: mixins.py
services/core/routers/: config.py  router_include.py
services/core/security/: __init__.py  headers.py  rate_limit.py
services/core/shared/schemas/: base.py
services/core/shared/types/: rudate.py
services/core/shortlists/: routes.py  schemas.py  service.py
services/core/users/: enums.py  exceptions.py  models.py
services/core/users/dependencies/: auth_depends.py
services/core/users/repositories/: base.py
services/core/users/routes/: auth.py  auth_v2.py  user.py
services/core/users/schemas/: admin.py  auth.py  email_auth.py  tma.py
(+598 files in other folders)
